# FactuSync

.github/workflows/: ci.yml  dependency-scan.yml
backend/: .coverage  .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements-ci.txt
backend/config/: celery.py  settings.py  urls.py
backend/enterprise_documents/: admin.py  apps.py  auth_tokens.py  authentication.py  health.py  logging_utils.py  middleware.py  models.py  pdf_renderer.py  request_context.py  secret_store.py  serializers.py  services.py  storage.py  tasks.py  throttling.py  urls.py  views.py
backend/enterprise_documents/dte/: models.py  parser.py  validators.py
backend/enterprise_documents/migrations/: 0001_initial.py  0002_rename_enterprise__tenant__0f6037_idx_enterprise__tenant__01b018_idx_and_more.py  0003_tenant_erp_fields_documentrecord_en_cola_and_more.py  0004_tenant_operation_mode_tenantmembership.py  0005_taxserviceprofile_certificate_password_encrypted.py  0006_alter_documentrecord_status.py  0007_revokedtoken.py  0008_rename_enterprise_d_token_t_9e2554_idx_enterprise__token_t_0892ce_idx.py
backend/enterprise_documents/sii/: __init__.py  client.py  exceptions.py
backend/enterprise_documents/tests/: conftest.py  test_api.py  test_parser_and_auth.py
backend/enterprise_documents/tests/fixtures/: sample_dte.xml
backend/factura_sii_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/app/: App.jsx
(+44 files in other folders)
